# goit-pythonweb-hw-012

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
docs/: conf.py  index.rst
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repositories/: contains.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/routes/const/: contacts.py
src/services/: auth.py  contacts.py  email_service.py  upload_file.py  users.py
src/services/templates/: reset_password_email.html  verify_email.html
src/services/utils/: email_template_utils.py  hash_helper.py  str_to_email.py
tests/: conftest.py  test_auth_services_unit.py  test_contacts_repository_unit.py  test_contacts_services_unit.py  test_routes_auth.py  test_routes_users.py  test_users_repository_unit.py  test_users_services_unit.py
